<resources>
    <string name="app_name">MyWallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Wallet</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="fixer_api_key">90f25197c3f0c6a7c6467bbd57b4be28</string>
    <string name="fixer_url">http://data.fixer.io/api/</string>
    <string name="api_kay">AIzaSyD33M4gWenI8VSwFF-1z9w46mU2HptJz6c</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="c">C</string>
    <string name="fpoint">.</string>
    <string name="_0">0</string>
    <string name="description">Description</string>
    <string name="loading">…Loading…</string>
    <string name="rs">Rs.</string>
    <string name="no_connection">Disconnected Please Reconnect to Use App</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="__or__">------------------ OR ------------------</string>
    <string name="no_account_yet">If you don\'t have account yet. Please Register..!</string>
    <string name="register">Register</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Categories</string>
    <string name="budgets">Budgets</string>
    <string name="reports">Reports</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="add_new_account">Add New Account</string>
    <string name="add_new_category">Add New Category</string>
    <string name="select_category">Select Category</string>
    <string name="add_new_record">Add New Record</string>
    <string name="calculator">Calculator</string>
    <string name="home">Home</string>
    <string name="delete_this_category">Do you want to delete this category item?</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="rs_0_00">Rs. 0.00</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>
    <string name="currency_converter">Currency Converter</string>
</resources>
